# rust_d3d11

./: Cargo.toml  README.md  atmospheric_precompute.hlsl  atmospheric_precompute_copy_irradiance.hlsl  atmospheric_precompute_copy_single_inscatter.hlsl  atmospheric_precompute_copy_transmittance.hlsl  atmospheric_precompute_single_inscatter.hlsl  atmospheric_precompute_single_irradiance.hlsl  atmospheric_precompute_transmittance.hlsl  fragment_shader.hlsl  gbuffer.hlsl  vertex_shader.hlsl
src/: camera.rs  engine.rs  main.rs  object.rs  scene.rs  simple_gbuffer_pass.rs  simple_triangle.rs  vertex_colour_stage.rs
src/atmosphere/: mod.rs  precompute.rs
src/render_backend/: backend.rs  gpu_buffer.rs  mesh.rs  mod.rs  render_pass.rs  render_stage.rs  renderer.rs  shader.rs  texture.rs
